--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,9 @@ version: "3.9"
 services:
 
   # Create service with RabbitMQ.
-  notifier:
+  message_broker:
     image: rabbitmq:3-management-alpine
-    container_name: notifier
+    container_name: message_broker
     ports:
       - 5672:5672   # for sender and consumer connections
       - 15672:15672 # for serve RabbitMQ GUI
@@ -29,9 +29,9 @@ services:
     networks:
       - dev-network
     depends_on:
-      - notifier
+      - message_broker
 
-  consumer:
+  notifier:
     container_name: notifier
     build:
       context: .
@@ -43,7 +43,7 @@ services:
       - dev-network
     depends_on:
       - sender
-      - notifier
+      - message_broker
 
 networks:
   # Create a new Docker network.
